--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header class="header">
         <!-- Header nav -->
         <nav class="header__nav">
-            <a href="#">Что посмотреть</a>
-            <a href="#" class="active">Фильмотека</a>
+            <button class="js-btn-2">Что посмотреть</button>
+            <button class="js-btn-1">Фильмотека</button>
         </nav>
         <!-- END Header nav -->
         <div class="header__main">
@@ -243,7 +243,7 @@
              </div>
         </aside>
         <section class="main">
-            <div class="nav-wrap">
+            <div class="nav-wrap" id="js-nav-1">
                 <nav class="nav">
                     <a href="#" class="active">Обзор</a>
                     <a href="#">Загруженное</a>
@@ -654,7 +654,7 @@
                     <p class="note">Вы всегда можете добавить новый сериал или посмотреть их в разделе <a href="#">я смотрю</a> вашей фильмотеки.</p>
                 </div> 
             </div>
-            <div class="nav-wrap">
+            <div class="nav-wrap" id="js-nav-2">
                 <nav class="nav">
                     <a href="#">Интересное</a>
                     <a href="#" class="active">Новое</a>
@@ -783,7 +783,7 @@
                         <i class="icon icon_eye-act"></i>
                         <i class="icon icon_delite"></i>
                         <div class="watch-status">
-                            <button class="active">Смотрю сейчас</button>
+                            <button>Смотрю сейчас</button>
                             <button>Уже посмотрел</button>
                         </div>
                         <div class="mark">
@@ -976,7 +976,7 @@
                         <i class="icon icon_eye-act"></i>
                         <i class="icon icon_delite"></i>
                         <div class="watch-status">
-                            <button class="active">Смотрю сейчас</button>
+                            <button>Смотрю сейчас</button>
                             <button>Уже посмотрел</button>
                         </div>
                         <div class="mark">
@@ -1169,7 +1169,7 @@
                         <i class="icon icon_eye-act"></i>
                         <i class="icon icon_delite"></i>
                         <div class="watch-status">
-                            <button class="active">Смотрю сейчас</button>
+                            <button>Смотрю сейчас</button>
                             <button>Уже посмотрел</button>
                         </div>
                         <div class="mark">
@@ -1331,7 +1331,7 @@
                         <i class="icon icon_eye-act"></i>
                         <i class="icon icon_delite"></i>
                         <div class="watch-status">
-                            <button class="active">Смотрю сейчас</button>
+                            <button>Смотрю сейчас</button>
                             <button>Уже посмотрел</button>
                         </div>
                         <div class="mark">
