--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <button>Освободить</button>
                 </div>
             </div>
-            <div class="film-wrap js-masonry">
+            <div class="film-wrap js-masonry js-films-1">
                 <div class="film">
                     <a href="#" class="film__img">
                         <img src="http://placehold.it/190x269" alt="">
@@ -664,7 +664,7 @@
                     <a href="#">Топ Кинопоиска</a>
                 </nav>
             </div>
-            <div class="film-wrap js-masonry">
+            <div class="film-wrap js-masonry js-films-2">
                 <div class="film film_new">
                     <a href="#" class="film__img">
                         <img src="http://placehold.it/190x269" alt="">
